@@ -58,8 +58,8 @@ C-LEVEL FACILITIES
 
 UTILITIES
 
-- Add "duplicated", "patternFrequency", "unique" and "sort" methods for
-  XStringSet and XStringViews objects. Also, for completeness, the "<=",
+- Add "order", "sort", "duplicated", "unique" and "patternFrequency" methods
+  for XStringSet and XStringViews objects. Also, for completeness, the "<=",
   ">=", "<" and ">" operators between XString objects should be provided.
   Note that Martin's srsort() from the ShortRead package is much faster
   than sortDNAString() from the old Biostrings 1 package:
