@@ -742,7 +742,7 @@ alignPhiX174 <-
 summary(alignPhiX174, weight = wtPhiX174)
 
 phiX174Revised <-
-  replaceLetterAtLoc(phiX174, c(2793, 2811), "TT")
+  replaceLetterAt(phiX174, c(2793, 2811), "TT")
 table(countPDict(srPDict, phiX174Revised))
 @
 
