@@ -25,6 +25,9 @@ C-LEVEL FACILITIES
 
 UTILITIES
 
+o Renamed replaceLetterAtLoc() -> replaceLetterAt() and renamed its 'loc'
+  argument -> 'at'. Deprecated replaceLetterAtLoc().
+
 o Added predefined 'RNA_GENETIC_CODE' object.
 
 o Moved the utility functions for importing a mask (read.agpMask(),
